--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,9 @@
 body {
 	margin: 0;
-	background-color: rgb(20, 0, 94);
+	font-family: 'Muli' sans-serif;
+	background: #8f57fd;
+}
+
+* {
+	box-sizing: border-box;
 }
