--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   height: 300px;
-  border-radius: 0px0px40px40px;
+  border-radius: 0px 0px 40px 40px;
 }
 
 .main__title {
@@ -13,16 +13,16 @@
 }
 
 .input {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255,255,255,0.1);
   border: 2px solid white;
   border-radius: 25px;
   color: white;
-  font-family: "Muli", sans-serif;
+  font-family: 'Muli', sans-serif;
   font-size: 16px;
   height: 50px;
   margin-bottom: 20px;
   outline: none;
-  padding: 0px20px;
+  padding: 0px 20px;
   width: 70%;
 }
 
