Estructura y estios del Footer

--- a/src/assets/styles/components/CarouselItem.scss
+++ b/src/assets/styles/components/CarouselItem.scss
@@ -1,3 +1,23 @@
+.carousel-item {
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  width: 200px;
+  height: 250px;
+  margin-right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 450ms all;
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
+}
+
+.carousel-item:hover ~ .carousel-item {
+  -webkit-transform: translate3d(100px, 0, 0);
+          transform: translate3d(100px, 0, 0);
+}
+
 .carousel-item__img {
   width: 200px;
   height: 250px;
